--- a/v2/scss/components/_layout.scss
+++ b/v2/scss/components/_layout.scss
@@ -24,6 +24,7 @@
 
 .layout.flex-container {
     display: flex;
+    align-items: flex-start;
 
     &.down {
         flex-direction: column;
